dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Revision: 1.82 $)dnl
AC_PREREQ(2.50)
AC_INIT(README)

PACKAGE=minstack

AC_MSG_NOTICE([minstack    A minimal stack for UDP and/or TCP transaction.])
AC_MSG_NOTICE([Copyright (C) 2010,2011 Aurelien BOUIN - <a_bouin@yahoo.fr>])

dnl *********************************************************************
dnl Source packaging numbers
MINSTACK_MAJOR_VERSION=0
MINSTACK_MINOR_VERSION=5
MINSTACK_MICRO_VERSION=3
MINSTACK_VERSION=$MINSTACK_MAJOR_VERSION.$MINSTACK_MINOR_VERSION.$MINSTACK_MICRO_VERSION

VERSION=$MINSTACK_VERSION

AC_SUBST(VERSION)
AC_SUBST(PACKAGE)

dnl AC_PREFIX_DEFAULT('$(HOME)/local')
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_ARG_PROGRAM
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AM_PROG_CC_C_O

AC_LIBTOOL_WIN32_DLL
LT_AC_PROG_SED
AC_PROG_LIBTOOL

case $target_os in
	*mingw32ce)
       	CFLAGS="$CFLAGS -D_WIN32_WCE -D_WIN32_WINNT=0x0501"
       	CXXFLAGS="$CXXFLAGS -D_WIN32_WINNT=0x0501"
       	LIBS="$LIBS -lws2 -liphlpapi"
		mingw_found=yes
		mingwce_found=yes
		;;
	*mingw*)
		CFLAGS="$CFLAGS -D_WIN32_WINNT=0x0501 "
		CXXFLAGS="$CXXFLAGS -D_WIN32_WINNT=0x0501"
		LIBS="$LIBS -lws2_32 -lwsock32 -lwinmm"
		mingw_found=yes
	;;
	*darwin*)
		dnl use macport installation
		ACLOCAL_MACOS_FLAGS="-I /opt/local/share/aclocal"
	;;
esac

AC_CONFIG_COMMANDS([libtool-hacking],[
if test "$mingw_found" = "yes" ; then
	echo "Hacking libtool to work with mingw..."
	sed -e 's/\*\" \$a_deplib \"\*/\*/' < ./libtool > libtool.tmp
	cp -f ./libtool.tmp ./libtool
	rm -f ./libtool.tmp
fi
],[mingw_found=$mingw_found])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h string.h sys/socket.h unistd.h])

# Checks for library functions.
AC_CHECK_FUNCS([gethostbyname inet_ntoa memset select socket])

CONFIG_CFLAGS=

dnl declare --enable-* args and collect ac_help strings

AC_ARG_ENABLE(gdb,
[  --enable-gdb          turn on gdb debugging.],
enable_gdb=$enableval,enable_gdb="yes")

if test "x$enable_gdb" = "xyes"; then
  CONFIG_CFLAGS="$CONFIG_CFLAGS -g"
fi

AC_ARG_ENABLE(debug,
[  --enable-debug          turn on debugging.],
enable_debug=$enableval,enable_debug="yes")

if test "x$enable_debug" = "xyes"; then
  CONFIG_CFLAGS="$CONFIG_CFLAGS -g -DDEBUG_ENABLED"
fi

dnl conditionnal build of the TCP stack
AC_ARG_ENABLE(tcp,
      [  --enable-tcp=[yes/no]    Turn on or off compilation of the TCP stack [default=yes]],
      [case "${enableval}" in
        yes) tcp=true ;;
        no)  tcp=false ;;
        *) AC_MSG_ERROR(bad value ${enableval} for --enable-tcp) ;;
      esac],[tcp=true])
AM_CONDITIONAL(BUILD_TCP, test x$tcp = xtrue)


dnl conditionnal build of test applications
AC_ARG_ENABLE(test,
      [  --enable-test=[yes/no]    Turn on or off compilation of Test applications [default=no]],
      [case "${enableval}" in
        yes) test=true ;;
        no)  test=false ;;
        *) AC_MSG_ERROR(bad value ${enableval} for --enable-test) ;;
      esac],[test=false])

if test "$test" = "false" ; then
echo "Test applications compilation are disabled."
fi

dnl build test if required
AM_CONDITIONAL(BUILD_TEST, test x$test = xtrue)

AC_SUBST(CONFIG_CFLAGS)

#VERSION_INFO="0:4:2"
#AC_SUBST(VERSION_INFO)

AC_OUTPUT([
  Makefile
  src/Makefile
  test/Makefile
  include/Makefile
  minstack.pc
])

echo "$PACKAGE build configuration ended."

if test "$tcp" = "false" ; then
echo "The TCP stack is not compiled."
fi

if test x$test = xtrue ; then
	echo "* Test applications are compiled."
fi
echo "Just type 'make' to compile, and then 'make install' as root to install it."
